--- a/src/Gemfile
+++ b/src/Gemfile
@@ -7,3 +7,8 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 # gem "rails"
 
 gem "rspec", "~> 3.10"
+gem "colorize", "~> 0.8.1"
+
+gem "tty-prompt"
+
+gem 'terminal-table', '~> 3.0', '>= 3.0.1'
